# EIGAN

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  None  README.md  RELEASE.md  SECURITY.md  eigan  eigan.py  install.sh  pyproject.toml  scope.example.yaml  vulnforge  vulnforge.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
config/: README.md  ai.yaml  ai_pricing.yaml  profiles.yaml  tools.yaml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: AUDIT.md  BLOCKERS.md  CURRENT_STATE.md  DECISIONS.md  GAP_ANALYSIS.md  README.md  ROADMAP.md  TARGET_ARCHITECTURE.md  ai-providers.md  architecture.md  user-flows.md
docs/adr/: 0001-plugin-capability-architecture.md  0002-risk-engine-feeds.md  0003-plugins-directory-layout.md  0004-cascade-orchestration-and-web-ui.md  0005-launcher-and-product-experience.md  0006-tool-provisioning-strategy.md  0007-cognitive-core-planner.md  0008-agent-platform-ten-pillars.md  0009-eigan-autonomous-agent.md  0010-ai-provider-registry.md  0011-policy-guardrail-engine.md  0012-ai-native-mandatory.md  0013-tool-credential-management.md  0014-api-authentication.md  0015-ssrf-hardening.md  0016-prompt-injection-defense.md  0017-incremental-persistence.md  0018-discovery-driven-target-expansion.md  0019-wordlists.md  0020-expose-blue-purple.md  0021-blue-engine.md  0022-purple-correlation.md  0023-exposure-secrets.md  0024-ai-remediation.md  0025-observability-token-cost.md  0026-event-bus.md  0027-validation-confidence.md  0028-dns-enumeration.md
docs/design/: README.md  components.md  personas.md
docs/internal/: AUDIT.md  README.md
docs/roadmap/: autonomous-platform.md  commercial.md
examples/: README.md  targets.example.txt
knowledge/: README.md
knowledge/attack/: techniques.yaml
knowledge/compliance/: mappings.yaml
knowledge/skills/sql-injection/: SKILL.md
knowledge/skills/weak-tls/: SKILL.md
knowledge/skills/xss/: SKILL.md
plugins/: README.md
plugins/blue/detection-rules/: metadata.yaml
plugins/blue/grype/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/blue/incident-response/: metadata.yaml
plugins/blue/log-analysis/: metadata.yaml
plugins/blue/log_analysis/: metadata.yaml  parser.py  runner.py
plugins/blue/malware-analysis/: metadata.yaml
plugins/blue/siem/: metadata.yaml
plugins/blue/threat-hunting/: metadata.yaml
plugins/blue/trivy/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/purple/attack-simulation/: metadata.yaml
plugins/purple/control-validation/: metadata.yaml
plugins/purple/detection-validation/: metadata.yaml
plugins/red/active-directory/: metadata.yaml
plugins/red/amass/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/burp/: metadata.yaml
plugins/red/cloud/: metadata.yaml
plugins/red/dalfox/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/dns_enum/: metadata.yaml  parser.py  runner.py
plugins/red/dnsx/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/enum4linux/: metadata.yaml  parser.py  runner.py
plugins/red/exploitation/: metadata.yaml
plugins/red/exposure/: metadata.yaml  parser.py  runner.py
plugins/red/feroxbuster/: metadata.yaml
plugins/red/ffuf/: metadata.yaml  parser.py  requirements.txt  runner.py  wordlist.txt
plugins/red/gowitness/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/httpx/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/katana/: metadata.yaml  parser.py  runner.py
plugins/red/ldapsearch/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/naabu/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/nikto/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/nmap/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/nmap_nse/: metadata.yaml  parser.py  runner.py
plugins/red/nuclei/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/password-audit/: metadata.yaml
plugins/red/sqlmap/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/subfinder/: metadata.yaml  parser.py  requirements.txt  runner.py
plugins/red/testssl/: parser.py  (+3 more)
src/eigan/: README.md  __init__.py  __main__.py  capability.py  envfile.py  logging_setup.py  perspective.py
src/vulnforge/: __init__.py  __main__.py  capability.py  perspective.py
tests/: README.md  test_adapters.py  test_ai_provider.py  test_analysis.py  test_analysis_engine.py  test_api.py  test_api_scan.py  test_apitoken.py  test_base_runner.py  test_blue.py  test_bus.py  test_cascade.py  test_cascade_orchestrator.py  test_cli.py  test_cognitive.py  test_conversation.py  test_correlation.py  test_credentials.py  test_envfile.py  test_findings.py  test_knowledge_report.py  test_launcher.py  test_logging.py  test_markdown_lmstudio.py  test_menu.py  test_merge.py  test_observability.py  test_persistence.py  test_perspective.py  test_pillars.py  test_pipeline.py  test_policy.py  test_purple.py  test_registry.py  test_remediation.py  test_reports.py  test_risk.py  test_roadmap.py  test_sanitize.py  test_scope.py  (+6 more)
web/: README.md  index.html
web/assets/: tokens.css
(+179 files in other folders)
