[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnforge"
version = "0.2.0"
description = "Plataforma modular de operações de segurança (Red/Blue/Purple) — Core Engine próprio, plugins, IA opcional. Uso autorizado."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "VulnForge contributors" }]
keywords = ["security", "vulnerability", "scanner", "pentest", "devsecops"]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]
ai = ["httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
vulnforge = "vulnforge.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vulnforge = ["report/templates/*.j2", "api/static/*"]

[tool.pytest.ini_options]
# "." habilita `import plugins.<cat>.<nome>...` nos testes de plugin (ADR-0003).
pythonpath = ["src", "."]
testpaths = ["tests", "plugins"]
# importlib: cada plugin tem tests/test_parser.py (mesmo basename) sem colisão.
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
