[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eigan"
version = "0.0.0"
description = "EIGAN — Enhanced Intelligent Guardian for Autonomous Assessment: agente de segurança autônomo dirigido por IA (Web + Infra, Outside-In/Inside-Out). Uso autorizado."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "EIGAN contributors" }]
keywords = ["security", "vulnerability", "scanner", "pentest", "devsecops"]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]
ai = ["httpx>=0.27"]
tui = ["textual>=0.60", "rich>=13.0"]
# httpx: os testes da API usam o TestClient do Starlette (via FastAPI), que exige
# httpx desde Starlette 0.38. Sem ele em [dev], `pip install -e ".[dev]"` (o que a
# CI faz) quebraria a coleta dos testes de API. Declarado explícito aqui.
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.8", "httpx>=0.27"]

[project.scripts]
eigan = "eigan.cli.main:main"
# Alias de transição VulnForge → EIGAN: avisa da depreciação e delega.
vulnforge = "eigan.cli.main:deprecated_alias"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# py.typed: PEP 561 — sinaliza a consumidores que o pacote publica type hints.
eigan = ["py.typed", "report/templates/*.j2", "api/static/*", "engine/wordlists_data/*.txt"]

[tool.pytest.ini_options]
# "." habilita `import plugins.<cat>.<nome>...` nos testes de plugin (ADR-0003).
pythonpath = ["src", "."]
testpaths = ["tests", "plugins"]
# importlib: cada plugin tem tests/test_parser.py (mesmo basename) sem colisão.
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Conjunto padrão do ruff (E4/E7/E9 + F = pyflakes) + I (ordenação de imports/isort).
# E501 (linha longa) fica de fora: o formatter arruma a largura do código e strings/
# URLs longas são permitidas — mesmo comportamento que a CI já validava, agora com
# imports padronizados e garantidos pelo lint.
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
